<resources>
    <string name="app_name">PaySlash</string>
    <string name="accessibility_service_description">PaySlash</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Settings</string>
    <string name="title_exit">Exit</string>
    <string name="title_scanqr">Scan QR</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="qr_upi">UPI ID</string>
    <string name="qr_upi_scanned"></string>
    <string name="qr_upi_scanned_text">Scan QR Code</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_money">Send Money</string>
    <string name="request_money">Request Money</string>
    <string name="check_balance">Check Balance</string>
    <string name="my_profile">My Profile</string>
    <string name="pending_transactions">Pending Transactions</string>
    <string name="transactions">Transactions</string>
    <string name="upi_pin">UPI PIN</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="upi_id">UPI ID</string>
    <string name="ifsc_account_number">IFSC Account Number</string>
    <string name="saved_beneficiery">Saved Beneficiery</string>
    <string name="sender_phone_number">Sender Phone Number</string>
    <string name="reciever_phone_number">Reciever Phone Number</string>
    <string name="amount_to_send">Amount to Send</string>
    <string name="upi_password">Enter UPI Password</string>
</resources>
